other changes right

--- a/track.html
+++ b/track.html
@@ -68,7 +68,7 @@ style: 'mapbox://styles/mapbox/streets-v11'
       
       let objFromLocalStorage = localStorage.getItem('coordinates');
       document.getElementById("result").innerHTML = objFromLocalStorage; 
-    /*  mapboxgl.accessToken = 'pk.eyJ1IjoiZmFyb3VrdG91aWwiLCJhIjoiY2twbDhjZnpxMDhxbjJwbzFsYzNmZzQwcyJ9.H1lacPoEf2vPxYJLGb3O1A';
+     mapboxgl.accessToken = 'pk.eyJ1IjoiZmFyb3VrdG91aWwiLCJhIjoiY2twbDhjZnpxMDhxbjJwbzFsYzNmZzQwcyJ9.H1lacPoEf2vPxYJLGb3O1A';
       const map = new mapboxgl.Map({
       container: 'map', // container ID
       style: 'mapbox://styles/mapbox/streets-v11', // style URL
@@ -102,7 +102,7 @@ console.log("dddddddddddddd"+objFromLocalStorage)
       'line-width': 8
       }
   });
-});*/
+});
 console.log("dddddddddddddd"+objFromLocalStorage)
 });
 
