other changes right again

--- a/track.html
+++ b/track.html
@@ -5,6 +5,8 @@
 
 <title>Some tests of tracking</title>
 
+<link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
+<script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
 <style>
 
         #map{
