other changes right again 3

--- a/track.html
+++ b/track.html
@@ -74,7 +74,7 @@ style: 'mapbox://styles/mapbox/streets-v11'
       const map = new mapboxgl.Map({
       container: 'map', // container ID
       style: 'mapbox://styles/mapbox/streets-v11', // style URL
-      center: objFromLocalStorage,
+      center: [objFromLocalStorage],
       zoom: 15
 });
 console.log("dddddddddddddd"+objFromLocalStorage)
